--- a/MSR/MSR-4.1-Sentinel-BU.jrxml
+++ b/MSR/MSR-4.1-Sentinel-BU.jrxml
@@ -339,7 +339,7 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="107" splitType="Stretch">
+		<band height="60" splitType="Stretch">
 			<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.FreeLayout"/>
 			<frame>
 				<reportElement positionType="Float" x="0" y="0" width="730" height="40" uuid="f9d4fc46-adc0-4ad1-9b2a-acd97a57a8fe"/>
@@ -352,23 +352,22 @@
 					<anchorNameExpression><![CDATA[$V{x.y_SentinelBuAccounts}]]></anchorNameExpression>
 				</textField>
 				<staticText>
-					<reportElement style="NormalText" positionType="Float" x="0" y="20" width="730" height="30" isPrintWhenDetailOverflows="true" uuid="d3e32e70-ca08-4e3e-aae1-c7a5fd631c12"/>
+					<reportElement style="NormalText" positionType="Float" x="-1" y="22" width="730" height="15" isPrintWhenDetailOverflows="true" uuid="2f238b33-f12f-4d53-a611-b8ed526115db"/>
 					<textElement>
 						<font fontName="Arial" size="11"/>
 					</textElement>
-					<text><![CDATA[In the following paragraphs are reported the lists of currently defined, added and removed users accounts on Sentinel BU, in an active status, for the current month with related details.
-]]></text>
+					<text><![CDATA[The number of all Avaloq Sourcing (Switzerland & Liechtenstein) SA user accounts on Sentinel BU with potential access to the system (incl. LOCKED]]></text>
+				</staticText>
+				<staticText>
+					<reportElement style="NormalText" positionType="Float" x="-2" y="37" width="72" height="18" isPrintWhenDetailOverflows="true" uuid="c15c8561-b5cb-4df3-939a-ed54d8680c54"/>
+					<textElement>
+						<font fontName="Arial" size="11"/>
+					</textElement>
+					<text><![CDATA[accounts) is ]]></text>
 				</staticText>
 			</frame>
-			<staticText>
-				<reportElement style="NormalText" positionType="Float" x="0" y="50" width="730" height="30" isPrintWhenDetailOverflows="true" uuid="2f238b33-f12f-4d53-a611-b8ed526115db"/>
-				<textElement>
-					<font fontName="Arial" size="11"/>
-				</textElement>
-				<text><![CDATA[The number of all Avaloq Sourcing (Switzerland & Liechtenstein) SA user accounts on Sentinel BU with potential access to the system (incl. LOCKED accounts) is ]]></text>
-			</staticText>
 			<componentElement>
-				<reportElement positionType="Float" x="0" y="81" width="70" height="16" uuid="17faf07d-b51b-4329-adba-8424c2e2aec5">
+				<reportElement positionType="Float" x="71" y="37" width="70" height="16" uuid="17faf07d-b51b-4329-adba-8424c2e2aec5">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table 1_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table 1_CH"/>
