--- a/MSR/MSR-2.1-Management-Summary.jrxml
+++ b/MSR/MSR-2.1-Management-Summary.jrxml
@@ -25,9 +25,9 @@
 	   CONCAT (extract(year from export_date), ' - ',LPAD(extract(month from export_date)::text, 2, '0') ) AS yearmonth, 
 	   COUNT(group_id) AS nb_users
   FROM msr.unix_dba_users
-  WHERE (customer = 'ARAB')
+  WHERE (customer =  $P{customer} )
   AND  export_date >= to_date( $P{periodSelected} , 'YYYYMMDD') - interval '6 months' 
-  AND  export_date <= to_date('20190601', 'YYYYMMDD') 
+  AND  export_date <= to_date( $P{periodSelected} , 'YYYYMMDD') 
   GROUP BY customer, group_id, period_year, period_month
   ORDER BY customer, group_id, period_year, period_month]]>
 		</queryString>
@@ -321,7 +321,7 @@
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<stackedBar3DChart>
 				<chart evaluationTime="Report" theme="eye.candy.sixties">
-					<reportElement key="" x="0" y="0" width="483" height="230" uuid="dc999993-6775-4364-861f-65592dfc7c51">
+					<reportElement key="" x="0" y="0" width="483" height="230" uuid="620db260-61ba-488a-bc24-8f7869c4a827">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<chartTitle>
@@ -335,7 +335,14 @@
 				</chart>
 				<categoryDataset>
 					<dataset>
-						<datasetRun subDataset="EmployeeByType" uuid="6d525b2b-8b39-45b2-a5d3-5f0dcb000608"/>
+						<datasetRun subDataset="EmployeeByType" uuid="d6035398-87eb-436b-9bf1-2ce6e3053d53">
+							<datasetParameter name="customer">
+								<datasetParameterExpression><![CDATA[$P{customer}]]></datasetParameterExpression>
+							</datasetParameter>
+							<datasetParameter name="periodSelected">
+								<datasetParameterExpression><![CDATA[$P{selectedDate}]]></datasetParameterExpression>
+							</datasetParameter>
+						</datasetRun>
 					</dataset>
 					<categorySeries>
 						<seriesExpression><![CDATA[$F{user_role}]]></seriesExpression>
