--- a/MSR/MSR-3-Critical-Sensitive.jrxml
+++ b/MSR/MSR-3-Critical-Sensitive.jrxml
@@ -168,7 +168,13 @@
 					<property name="com.jaspersoft.studio.table.style.detail" value="Table_TD"/>
 				</reportElement>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="AssetsList" uuid="d4e0bf14-bc34-4ab4-92f2-8626918ce1d2">
+					<datasetRun subDataset="AssetsList" uuid="2bd651c1-e73f-4d8a-b5ba-d0ca2b7cdc20">
+						<datasetParameter name="customer">
+							<datasetParameterExpression><![CDATA[$P{customer}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="selected_date">
+							<datasetParameterExpression><![CDATA[$P{selectedDate}]]></datasetParameterExpression>
+						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
 					<jr:column width="140" uuid="fede1227-ff8b-4670-943d-14c0351634cd">
