--- a/MSR/Monthly-Security-Report-Book.jrxml
+++ b/MSR/Monthly-Security-Report-Book.jrxml
@@ -34,7 +34,7 @@ siem_client,
 	 where WU.customer= $P{customer} 
 	 and WU.export_date = to_date(concat(to_char( $P{Year}  , '0000'), to_char( $P{Month} , '00'), to_char( 1, '00')), 'YYYYMMDD')) as nb_win_users
 from msr.banks
-where company_tag =  $P{customer} ]]>
+where company_tag =  $P{customer}]]>
 	</queryString>
 	<field name="bank_id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.label" value="bank_id"/>
@@ -67,7 +67,7 @@ where company_tag =  $P{customer} ]]>
 	<variable name="section" class="java.lang.Integer"/>
 	<variable name="subsection" class="java.lang.Integer"/>
 	<variable name="selectedDate" class="java.lang.String">
-		<initialValueExpression><![CDATA[$P{Year}+String.format("%02d", $P{Month})+"01"]]></initialValueExpression>
+		<variableExpression><![CDATA[$P{Year}+String.format("%02d", $P{Month})+"01"]]></variableExpression>
 	</variable>
 	<group name="cover">
 		<groupHeader>
@@ -77,7 +77,7 @@ where company_tag =  $P{customer} ]]>
 						<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
 					</subreportParameter>
 					<subreportParameter name="customer">
-						<subreportParameterExpression><![CDATA[$P{customer}]]></subreportParameterExpression>
+						<subreportParameterExpression><![CDATA[$F{company}]]></subreportParameterExpression>
 					</subreportParameter>
 					<subreportParameter name="coverTitle">
 						<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
@@ -241,6 +241,9 @@ where company_tag =  $P{customer} ]]>
 				<subreportParameter name="subsection">
 					<subreportParameterExpression><![CDATA[0]]></subreportParameterExpression>
 				</subreportParameter>
+				<subreportParameter name="company_mesi">
+					<subreportParameterExpression><![CDATA[$F{company_mesi}]]></subreportParameterExpression>
+				</subreportParameter>
 				<returnValue subreportVariable="newChapter" toVariable="chapter"/>
 				<returnValue subreportVariable="newSection" toVariable="section"/>
 				<returnValue subreportVariable="newSubsection" toVariable="subsection"/>
@@ -279,11 +282,10 @@ where company_tag =  $P{customer} ]]>
 		<part uuid="96c56f03-7be9-457d-af09-676a8a89ee12">
 			<p:subreportPart xmlns:p="http://jasperreports.sourceforge.net/jasperreports/parts" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/parts http://jasperreports.sourceforge.net/xsd/parts.xsd">
 				<subreportParameter name="REPORT_CONNECTION">
-					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION} ]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$P{REPORT_CONNECTION}]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="chapter">
-					<subreportParameterExpression><![CDATA[$V{chapter} +1
-]]></subreportParameterExpression>
+					<subreportParameterExpression><![CDATA[$V{chapter} +1]]></subreportParameterExpression>
 				</subreportParameter>
 				<subreportParameter name="covertTitle">
 					<subreportParameterExpression><![CDATA[$P{coverTitle}]]></subreportParameterExpression>
